log
Fri 24 Mar 2023 11:19:06 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
49bfe9d
Fri 24 Mar 2023 11:19:20 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dd56a95
Fri 24 Mar 2023 11:29:26 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7b079b6
Fri 24 Mar 2023 11:32:03 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c04c79f
Fri 24 Mar 2023 11:33:19 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
7d48c51
Fri 24 Mar 2023 11:39:48 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
d463200
Fri 24 Mar 2023 11:46:20 AM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:6: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   51 |   if(lista->current)
      |      ^~~~~
      |      list
list.c:51:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c45065a
Fri 24 Mar 2023 11:46:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c1a8702
Fri 24 Mar 2023 11:56:48 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
6e1ab90
Fri 24 Mar 2023 11:59:58 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
a4f5c2a
Fri 24 Mar 2023 12:00:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
d2f0489
Fri 24 Mar 2023 12:03:06 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|4
total_score: 25/70
695a26f
Fri 24 Mar 2023 12:03:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
07f672c
Fri 24 Mar 2023 12:13:16 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  9|3
total_score: 35/70
baec5ae
Fri 24 Mar 2023 12:14:29 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:92:32: error: expected ‘;’ before ‘list’
   92 |   list->tail = list->tail->next
      |                                ^
      |                                ;
   93 |   list->head = nuevo;
      |   ~~~~                          
Compilation failed
be18d31
Fri 24 Mar 2023 12:14:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ca5b8f2
Fri 24 Mar 2023 12:15:13 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f34f122
Fri 24 Mar 2023 12:18:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
316f47b
